Color bar with names

--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
               text: unpack(rows, "location"),
               autocolorscale: true,
               visible: true,
+              colorbar: {
+                title: rows.columns[2],
+              },
             },
             {
               name: rows.columns[3],
@@ -120,6 +123,9 @@
               text: unpack(rows, "location"),
               autocolorscale: true,
               visible: false,
+              colorbar: {
+                title: rows.columns[3],
+              },
             },
             {
               name: rows.columns[4],
@@ -130,6 +136,9 @@
               text: unpack(rows, "location"),
               autocolorscale: true,
               visible: false,
+              colorbar: {
+                title: rows.columns[4],
+              },
             },
             {
               name: rows.columns[5],
@@ -140,6 +149,9 @@
               text: unpack(rows, "location"),
               autocolorscale: true,
               visible: false,
+              colorbar: {
+                title: rows.columns[5],
+              },
             },
             {
               name: rows.columns[6],
@@ -150,6 +162,9 @@
               text: unpack(rows, "location"),
               autocolorscale: true,
               visible: false,
+              colorbar: {
+                title: rows.columns[6],
+              },
             },
             {
               name: rows.columns[7],
@@ -160,6 +175,9 @@
               text: unpack(rows, "location"),
               autocolorscale: true,
               visible: false,
+              colorbar: {
+                title: rows.columns[7],
+              },
             },
             {
               name: rows.columns[8],
@@ -170,6 +188,9 @@
               text: unpack(rows, "location"),
               autocolorscale: true,
               visible: false,
+              colorbar: {
+                title: rows.columns[8],
+              },
             },
           ];
 
